        - t/04params.t
        - t/05quick.t
        - t/06output.t
        - t/06entities.t
        - t/07blankdoc.t
        - t/08literal.t
        - t/09exslt.t
        - t/10functions.t
        - t/11utf8.t
        - t/12import.t
        - t/13error.t
        - t/14security.t
        - t/15misc.t

    - In the process made "Encode" and perl-5.8.1. pre-requisites of this
    distribution.

1.73            Sun Oct  9 17:32:30 IST 2011
    - Possible fix for https://rt.cpan.org/Ticket/Display.html?id=71456 :
        - made the port reservation on t/14security.t for the non-existent
        URL more robust.

1.72            Thu Oct  6 13:37:13 IST 2011
    - Moved the benchmarking code under benchmark/ so it won't be indexed
    by CPAN (Tim Brody).
    - Avoid leaking memory inside extension elements by cleaning up on 
    stylesheet DESTROY (Tim Brody).
    - xsltInit() and xsltCleanupGlobals() to avoid leaking memory on 
    init/shutdown (Tim Brody).
    - Added support for stylesheet context functions via a 
    $stylesheet->register_function() method with the same arguments as 
    XML::LibXSLT->register_function(). (Tim Brody)
    - Added support for register_element() on stylesheet objects. The callback
    may leak memory though - nothing frees the _private attributes of the
    node + document owner for the passed arguments? (Tim Brody)

1.71            Sat Sep 10 20:38:23 IDT 2011
    - Fixed https://rt.cpan.org/Ticket/Display.html?id=50487 :
        - add a blacklist for libxslt-1.1.25 which has a deadlock that
        hangs a test.
    - Fixed https://rt.cpan.org/Ticket/Display.html?id=52422 :
        - Unexpected webserver dependency in test
    - Updated the version control instructions in the README to bitbucket.org.

1.70
     - fixed various bugs
     - documentation updates
     - #48247: Win32 patch kindly provided by KMX@cpan.org
     - sync with latest XML::LibXML ABI and add a compatibility check